solutions week1 eo2

--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Shopper application</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css" />
     <style>
       .w-75 {
         width: 75%;
@@ -15,6 +12,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
