--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
@@ -7,6 +7,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css"
     />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       .w-75 {
         width: 75%;
@@ -15,6 +17,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
