add typescript and bundler dependencies, configure ts, migrate main.js file to ts

--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
@@ -12,9 +12,12 @@
         width: 75%;
       }
     </style>
+    <script>
+      var parcelRequire;
+    </script>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
