update to newest parcel version, add scripts for production build

--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
@@ -3,18 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Shopper application</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css" />
     <style>
       .w-75 {
         width: 75%;
       }
     </style>
-    <script>
-      var parcelRequire;
-    </script>
   </head>
   <body>
     <div id="app"></div>
