api fetching and calculating proper data

--- a/week-2-wide-perspective/w02e02-data-manipulation/index.html
+++ b/week-2-wide-perspective/w02e02-data-manipulation/index.html
@@ -4,6 +4,7 @@
   <meta charset='UTF-8'>
   <title>Orders Dashboard</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type="module" src="src/main.js" defer></script>
   <style>
     [data-content] {
