--- a/week-2-wide-perspective/w02e02-data-manipulation/index.html
+++ b/week-2-wide-perspective/w02e02-data-manipulation/index.html
@@ -4,7 +4,7 @@
   <meta charset='UTF-8'>
   <title>Orders Dashboard</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css">
-  <script type="module" src="src/main.js" defer></script>
+  <script type="module" src="src/index.ts"></script>
   <style>
     [data-content] {
         font-size: 3em;
@@ -83,6 +83,7 @@
         </article>
       </div>
     </div>
+    <button id="new-order">Add new order</button>
   </main>
 </body>
 </html>
