--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>var exports = {};</script>
+
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
