Add solution 1.2 to the W0202 exercise

--- a/week-2-wide-perspective/w02e02-data-manipulation/index.html
+++ b/week-2-wide-perspective/w02e02-data-manipulation/index.html
@@ -83,6 +83,9 @@
         </article>
       </div>
     </div>
+    <div>
+      <button id="generate-order-button">Wygeneruj zamówienie</button>
+    </div>
   </main>
 </body>
 </html>
