--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/index.html
@@ -17,6 +17,6 @@
     <div id="app"></div>
     <script>var exports = {};</script>
 
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
