--- a/week-2-wide-perspective/w02e02-data-manipulation/index.html
+++ b/week-2-wide-perspective/w02e02-data-manipulation/index.html
@@ -31,6 +31,7 @@
       <p class="subtitle">
         Orders stats...
       </p>
+      <button class="button is-success" data-button="add-order">Add new order</button>
     </div>
   </header>
   <main class="container mt-6">
